[package]
name = "webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", fetures = [ "json" ] }
serde = { version = "1.0.119", features = [ "derive" ] }
serde_json = "1.0.61"

[dev-dependencies]
tokio = { version = "1.0.1", features = [ "full" ] }